@@ -47,6 +47,9 @@ Release 0.20.205.0 - unreleased
     MAPREDUCE-2558. Add JobTracker metrics for scheduling queues. (Jeffrey
     Naisbitt via cdouglas)
 
+    MAPREDUCE-2535. Fix NPE in JobClient caused by retirement. (Robert Joseph
+    Evans via cdouglas)
+
 Release 0.20.204.0 - unreleased
 
   NEW FEATURES
